# caixa-posto-janjao

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  db.py  logger_config.py  main.py  meu_caixa.db  meu_caixa.db-shm  meu_caixa.db-wal  pyproject.toml  requirements.txt
.github/workflows/: build-ios.yml  tests.yml
attached_assets/: Pasted-import-flet-as-ft-import-sqlite3-from-datetime-import-d_1782433351962.txt  Pasted-import-flet-as-ft-import-sqlite3-from-datetime-import-d_1782433948821.txt  Pasted-import-flet-as-ft-import-sqlite3-from-datetime-import-d_1782434933641.txt  Pasted-import-flet-as-ft-import-sqlite3-from-datetime-import-d_1782440334871.txt  Pasted-import-flet-as-ft-import-sqlite3-from-datetime-import-d_1782517226933.txt
scripts/: build-ios.sh
tests/: __init__.py  test_db.py
ui/: __init__.py  paleta.py
