[project]
name = "caixa-posto-janjao"
version = "0.2.1"
description = "Caixa de turno para o Posto Janjão"
requires-python = ">=3.11"
authors = [
    { name = "juglesbass", email = "juglesbass@example.com" }
]
dependencies = [
    "flet>=0.85.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.flet]
product = "Caixa - Posto Janjão"
org = "br.com.postojanjao"
bundle_id = "br.com.postojanjao.caixa"
build_number = 1

[tool.flet.app]
module = "main"

[tool.flet.ios]
artifact = "CaixaPostoJanjao"
# Preencha ao gerar o .ipa no Mac (ver docs/IOS.md):
# team_id = "XXXXXXXXXX"
# provisioning_profile = "Caixa Posto Janjao Development"
# signing_certificate = "Apple Development"
# export_method = "debugging"

[tool.flet.ios.info]
UIFileSharingEnabled = true
LSSupportsOpeningDocumentsInPlace = true
ITSAppUsesNonExemptEncryption = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[[tool.pytest.ini_options.markers]]
"slow" = "marks tests as slow"

[[tool.pytest.ini_options.markers]]
"integration" = "marks tests as integration tests"
